# ewdiscordbot

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.cfg
ewdiscordbot/: run_bot.py
