[tool.poetry]
name = "ewdiscordbot"
version = "0.1.0"
description = "A stupid bot for fetching quotes and generating markov sentences based on Explorers Wanted characters."
authors = ["Daniel Andrlik <daniel@andrlik.org>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.9"
discord-py-interactions = "^4.0.2"
requests = "^2.27.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
types-requests = "^2.27.10"
black = {extras = ["d"], version = "^22.1.0"}
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
